# STP

./: README.md
Lab10_TPoly/: CMakeLists.txt
Lab10_TPoly/TMember/: TMember.cpp  TMember.h
Lab10_TPoly/TPoly/: TPoly.cpp  TPoly.h
Lab10_TPoly/TPoly_test/: TPoly_test.cpp  TPoly_test.h  main.cpp
Lab11_PhoneBook/: Makefile  Makefile.Debug  Makefile.Release  contacts.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
Lab11_PhoneBook/Tests/: Makefile  Makefile.Debug  Makefile.Release  Tests.pro
Lab11_PhoneBook/debug/: moc_mainwindow.cpp
Lab11_PhoneBook/release/: moc_mainwindow.cpp
Lab1_TFrac/: CMakeLists.txt
Lab1_TFrac/TFrac/: TFrac.cpp  TFrac.h
Lab1_TFrac/TFrac_test/: TFrac_test.h  main.cpp
Lab2_TPNumber/: CMakeLists.txt
Lab2_TPNumber/TPNumber/: TPNumber.cpp  TPNumber.h
Lab2_TPNumber/TPNumber_test/: TPNumber_test.h  main.cpp
Lab3_TComplex/: CMakeLists.txt
Lab3_TComplex/TComplex/: TComplex.cpp  TComplex.h
Lab3_TComplex/TComplex_test/: TComplex_test.h  main.cpp
Lab4_TMemory/: CMakeLists.txt
Lab4_TMemory/TMemory/: TMemory.h
Lab4_TMemory/TMemory_test/: TMemory_test.h  main.cpp
Lab5_TProc/: CMakeLists.txt
Lab5_TProc/TFrac/: TFrac.cpp  TFrac.h
Lab5_TProc/TProc/: TProc.h
Lab6_TEditor/: CMakeLists.txt
Lab6_TPNumberEditor/: CMakeLists.txt
Lab7_TFracEditor/: CMakeLists.txt
Lab8_TComplexEditor/: CMakeLists.txt
Lab8_TComplexEditor/TComplexEditor/: TComplexEditor.cpp  TComplexEditor.h
Lab8_TComplexEditor/TComplexEditor_test/: TComplexEditor_test.cpp  TComplexEditor_test.h  main.cpp
Lab9_TSet/: CMakeLists.txt
(+21 files in other folders)
