cmake_minimum_required(VERSION 3.12)
project(Lab8_TComplexEditor)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab8_TComplexEditor TComplexEditor_test/main.cpp TComplexEditor/TComplexEditor.cpp TComplexEditor/TComplexEditor.h TComplexEditor_test/TComplexEditor_test.cpp TComplexEditor_test/TComplexEditor_test.h)